--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ body {
     border-radius: 5px;
     border: 1px solid #fff;
     font-size: 3px;
-    overflow: hidden;
 }
 
 .board > div.snake {
@@ -118,8 +117,10 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     display: block;
-    width: 90%;
-    height: 90%;
-    border-radius: 50%;
-    background: #ff0000;
+    width: 100%;
+    height: 100%;
+    background: url('/images/apple.png');
+    background-size: 120%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
