--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
     display: block;
     width: 30px;
     height: 30px;
-    background: url('images/medal.png');
+    background: url('./images/medal.png');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -119,7 +119,7 @@ body {
     display: block;
     width: 100%;
     height: 100%;
-    background: url('/images/apple.png');
+    background: url('./images/apple.png');
     background-size: 120%;
     background-position: center;
     background-repeat: no-repeat;
